# image-processing-filters

./: .gitignore  README.md
.github/workflows/: cmake.yml
Assignment 1/: CMakeLists.txt  Color.cpp  Color.hpp  Common.hpp  Filter.cpp  Filter.hpp  Main.cpp  Makefile  Noise.cpp  Noise.hpp
Assignment 1/kernels/: laplacian.txt
